# home-assistant-rs

./: Cargo.toml
src/: lib.rs  rest_client.rs
src/api/: client.rs  mod.rs
src/api/entities/: entity_id.rs  mod.rs
src/mqtt/: client.rs  message.rs  mod.rs  objectid.rs  payload.rs  publisher.rs  state.rs  subscriber.rs  topic.rs
src/mqtt/entities/: button.rs  mod.rs  number.rs  state.rs  switch.rs
src/mqtt/entities/proto/: button.rs  device.rs  mod.rs  number.rs  switch.rs
src/supervisor/: mod.rs
src/supervisor/client/: host.rs  mod.rs  supervisor.rs
src/supervisor/entities/: mod.rs
