[package]
name = "home_assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["api", "supervisor"]
api = []
mqtt = ["dep:ha_mqtt", "dep:rumqttc"]
supervisor = []

[dependencies]
ha_mqtt = { git = "https://github.com/wassup-/ha_mqtt", optional = true }
log = "0"
reqwest = { version = "0.12", features = ["json"] }
rumqttc = { version = "0.24", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.42", features = ["full"] }
url = "2"
